modules/stack/global_vpc.tf

//vpc
resource "aws_vpc" "global" {
  cidr_block = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = var.vpc_name
    team = var.team
  }
}
