modules/stack/sec_group_ec2.tf
# security group ec2
resource "aws_security_group" "dev" {
  name = join("_",[var.namespace, "sg_ec2"])
  vpc_id = aws_vpc.dev.id
  ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
      from_port   = 8080
      to_port     = 8080
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }
 egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    namespace = var.namespace
    Name = join("_",[var.namespace, "sg_ec2"])
  }
}
